# stack-nix-static-linking

./: LICENSE  README.md  shell.nix  stack-nix-static-linking.cabal  stack.yaml
