name:                stack-nix-static-linking
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wfranzini/stack-nix-static-linking#readme
license:             BSD3
license-file:        LICENSE
author:              Walter Franzini
maintainer:          walter.franzini@gmail.com
copyright:           2017 Walter Franzini
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stack-nix-static-linking
  hs-source-dirs:      src
  main-is:             Main.hs
  ld-options:          -static
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
